Add Boostrap and first design (Alpha)

--- a/src/TodoList.Wasm/Pages/Index.razor
+++ b/src/TodoList.Wasm/Pages/Index.razor
@@ -1,3 +1,11 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<TodoList.Wasm.Components.Task.TaskList />
+
+
+<footer>
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+        This application uses the browser's Local Storage to store data.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</footer>
